# rusters

./: .gitignore  .gitmodules  Cargo.toml  README.md
sql/: up.sql
sql/migrations/: 1.chk.sql  1.up.sql  2.chk.sql  2.up.sql  3.chk.sql  3.down.sql  3.up.sql  migaton.yml
sql/migrations/alt_tokentypes/: chk.sql  down.sql  up.sql
sql/migrations/idx_clearancesuniquename/: chk.sql  down.sql  up.sql
sql/migrations/idx_clearancesuniquesequence/: chk.sql  down.sql  up.sql
sql/migrations/idx_sessioncookiesuniquename/: chk.sql  down.sql  up.sql
sql/migrations/idx_sessionsuniquehash/: chk.sql  down.sql  up.sql
sql/migrations/idx_usersuniquename/: chk.sql  down.sql  up.sql
sql/migrations/ins_clearances_items/: chk.sql  down.sql  up.sql
sql/migrations/ins_token_types/: chk.sql  down.sql  up.sql
sql/migrations/tbl_clearances/: chk.sql  down.sql  up.sql
sql/migrations/tbl_consumable_tokens/: chk.sql  down.sql  up.sql
sql/migrations/tbl_consumers/: chk.sql  down.sql  up.sql
sql/migrations/tbl_createusertokens/: chk.sql  down.sql  up.sql
sql/migrations/tbl_salts/: chk.sql  down.sql  up.sql
sql/migrations/tbl_sessioncookies/: chk.sql  down.sql  up.sql
sql/migrations/tbl_sessions/: chk.sql  down.sql  up.sql
sql/migrations/tbl_sessions_account_for_tokens/: chk.sql  down.sql  up.sql
sql/migrations/tbl_token_types/: chk.sql  down.sql  up.sql
sql/migrations/tbl_tokens/: chk.sql  down.sql  up.sql
sql/migrations/tbl_users/: chk.sql  down.sql  up.sql
sql/scripts/users/: get_by_creds.sql  get_by_row_id.sql
src/: context.rs  error.rs  lib.rs  migrator.rs  session.rs  tests.rs  token.rs  user.rs
src/error/: mod.rs
src/hash/: mod.rs
src/migrator/: mod.rs
src/session/: mod.rs
src/session/cookie/: mod.rs
src/tests/: mod.rs
src/token/: mod.rs
src/token/consumable_token/: mod.rs
src/user/: mod.rs
(+4 files in other folders)
