[package]
name = "rusters"
version = "1.0.0"
authors = ["Frankie Baffa <frankiebaffa@gmail.com>"]
edition = "2021"
[dependencies.async-std]
version = "1.11.0"
features = [ "attributes" ]
[dependencies.base64]
version = "0.13"
[dependencies.bcrypt]
version = "0.10"
[dependencies.chrono]
version = "0.4"
[dependencies.dotenv]
version = "0.15"
[dependencies.sha3]
version = "0.9"
[dependencies.sqlx]
version = "0.5.13"
features = [ "runtime-async-std-native-tls", "sqlite", "chrono" ]
[dependencies.uuid]
version = "0.8"
features = [ "v4" ]
